<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>

    <string name="my_location">My Location</string>


    <string name="enable_location">Enable Location</string>
    <string name="message_location">Your location is disabled. Please enable it in settings.</string>
    <string name="locationSettings">Location Settings</string>
    <string name="location_permission">Location Permission</string>
    <string name="location_permission_message">Location permission is needed to get your current location.</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="cancel">Cancel</string>
    <string name="_ok">OK</string>
    <string name="requrid_location">Please choose your location on the map</string>
    <string name="Please_Enable">Please Enable Location Service</string>
    <string name="try_again">try again</string>

    <string name="title">reminder title …</string>
    <string name="description">description</string>

    <string name="snack_permission_denied_explanation">You need to grant location permissions in order to select the location.</string>
    <string name="toast_select_location">Please select a location or point of interest.</string>
    <string name="error_last_location_null">We were unable to automatically retrieve your location. This can happen if you\'ve recently disabled location services. \n\nPlease tap the location button to try again.</string>
    <string name="marker_title_dropped_pin">Dropped Pin</string>
    <string name="toast_select_window">Select the marker\'s information window for additional options.</string>
    <string name="alert_add_location">Add</string>
    <string name="alert_delete_location">Delete</string>
    <string name="alert_cancel_dialog">Cancel</string>
    <string name="alert_prompt_for_option">What would you like to do with this location?</string>
    <string name="delete">Delete</string>

</resources>
